syntax = "proto3";

package fleetflow.partner.v1;
option go_package = "github.com/fleetflow/backend/proto/partner";

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";

// FleetPartnerAPI - Comprehensive third-party integration API
// Designed for ERP systems, logistics partners, insurance companies, etc.
service FleetPartnerAPI {
  // Authentication
  rpc Authenticate(AuthRequest) returns (AuthResponse);
  rpc RefreshToken(RefreshTokenRequest) returns (AuthResponse);

  // Fleet Information (Bulk Operations)
  rpc GetFleetOverview(FleetOverviewRequest) returns (FleetOverview);
  rpc GetVehicleList(VehicleListRequest) returns (VehicleListResponse);
  rpc GetDriverList(DriverListRequest) returns (DriverListResponse);
  rpc GetVehicleDetails(VehicleDetailsRequest) returns (VehicleDetails);

  // Trip Management (ERP Integration)
  rpc CreateTrip(CreateTripRequest) returns (TripResponse);
  rpc BulkCreateTrips(BulkTripRequest) returns (BulkTripResponse);
  rpc GetTripDetails(TripDetailsRequest) returns (TripDetails);
  rpc UpdateTripStatus(UpdateTripStatusRequest) returns (TripResponse);
  rpc CancelTrip(CancelTripRequest) returns (TripResponse);

  // Real-time Data Streams (High Performance)
  rpc StreamVehicleLocations(LocationStreamRequest) returns (stream VehicleLocationUpdate);
  rpc StreamTripUpdates(TripStreamRequest) returns (stream TripStatusUpdate);
  rpc StreamFleetAlerts(AlertStreamRequest) returns (stream FleetAlert);
  rpc StreamFuelEvents(FuelStreamRequest) returns (stream FuelEvent);

  // Historical Data (Analytics & Reporting)
  rpc GetLocationHistory(LocationHistoryRequest) returns (LocationHistoryResponse);
  rpc GetTripHistory(TripHistoryRequest) returns (TripHistoryResponse);
  rpc GetFuelHistory(FuelHistoryRequest) returns (FuelHistoryResponse);
  rpc GetDriverPerformance(DriverPerformanceRequest) returns (DriverPerformanceResponse);

  // Fleet Analytics (Business Intelligence)
  rpc GetFleetUtilization(UtilizationRequest) returns (UtilizationReport);
  rpc GetFuelEfficiency(FuelEfficiencyRequest) returns (FuelEfficiencyReport);
  rpc GetMaintenanceSchedule(MaintenanceRequest) returns (MaintenanceSchedule);
  rpc GetComplianceStatus(ComplianceRequest) returns (ComplianceReport);

  // Event Subscriptions (Webhook Management)
  rpc SubscribeToEvents(EventSubscriptionRequest) returns (SubscriptionResponse);
  rpc UnsubscribeFromEvents(EventUnsubscriptionRequest) returns (SubscriptionResponse);
  rpc ListSubscriptions(ListSubscriptionsRequest) returns (SubscriptionListResponse);
}

// Authentication Messages
message AuthRequest {
  string api_key = 1;
  string partner_id = 2;
  string signature = 3; // HMAC signature for security
}

message AuthResponse {
  string access_token = 1;
  string refresh_token = 2;
  google.protobuf.Timestamp expires_at = 3;
  repeated string permissions = 4;
}

message RefreshTokenRequest {
  string refresh_token = 1;
}

// Fleet Overview Messages
message FleetOverviewRequest {
  string partner_id = 1;
  repeated string fleet_ids = 2; // Optional: filter by specific fleets
}

message FleetOverview {
  int32 total_vehicles = 1;
  int32 active_vehicles = 2;
  int32 total_drivers = 3;
  int32 active_trips = 4;
  int32 completed_trips_today = 5;
  double total_distance_today = 6; // km
  double average_fuel_efficiency = 7; // km/liter
  int32 alerts_count = 8;
  repeated FleetSummary fleets = 9;
}

message FleetSummary {
  string fleet_id = 1;
  string fleet_name = 2;
  int32 vehicle_count = 3;
  int32 driver_count = 4;
  string status = 5; // ACTIVE, INACTIVE, MAINTENANCE
}

// Vehicle Messages
message VehicleListRequest {
  string partner_id = 1;
  int32 page = 2;
  int32 limit = 3;
  string status = 4; // Optional filter
  string fleet_id = 5; // Optional filter
}

message VehicleListResponse {
  repeated VehicleSummary vehicles = 1;
  int32 total_count = 2;
  int32 page = 3;
  bool has_more = 4;
}

message VehicleSummary {
  string vehicle_id = 1;
  string registration_number = 2;
  string make_model = 3;
  string status = 4; // AVAILABLE, ON_TRIP, MAINTENANCE, OFFLINE
  google.protobuf.Timestamp last_seen = 5;
  Location last_location = 6;
  string assigned_driver_id = 7;
  double fuel_level = 8; // percentage
}

message VehicleDetailsRequest {
  string vehicle_id = 1;
  bool include_recent_trips = 2;
  bool include_maintenance_history = 3;
}

message VehicleDetails {
  string vehicle_id = 1;
  string registration_number = 2;
  string make = 3;
  string model = 4;
  int32 year = 5;
  string vin = 6;
  string status = 7;
  VehicleSpecifications specifications = 8;
  VehicleLocation current_location = 9;
  repeated Trip recent_trips = 10;
  repeated MaintenanceRecord maintenance_history = 11;
  VehicleMetrics metrics = 12;
}

// Driver Messages
message DriverListRequest {
  string partner_id = 1;
  int32 page = 2;
  int32 limit = 3;
  string status = 4; // ACTIVE, INACTIVE, ON_TRIP, BREAK
}

message DriverListResponse {
  repeated DriverSummary drivers = 1;
  int32 total_count = 2;
  int32 page = 3;
  bool has_more = 4;
}

message DriverSummary {
  string driver_id = 1;
  string name = 2;
  string phone = 3;
  string license_number = 4;
  string status = 5;
  string assigned_vehicle_id = 6;
  google.protobuf.Timestamp last_active = 7;
  double rating = 8;
  int32 completed_trips = 9;
}

// Trip Messages
message CreateTripRequest {
  string partner_id = 1;
  string external_trip_id = 2; // Partner's trip reference
  string vehicle_id = 3;
  string driver_id = 4;
  Location pickup_location = 5;
  Location dropoff_location = 6;
  google.protobuf.Timestamp scheduled_start = 7;
  google.protobuf.Timestamp expected_completion = 8;
  double estimated_distance = 9; // km
  string priority = 10; // LOW, NORMAL, HIGH, URGENT
  map<string, string> metadata = 11; // Custom partner data
}

message BulkTripRequest {
  string partner_id = 1;
  repeated CreateTripRequest trips = 2;
}

message BulkTripResponse {
  repeated TripResponse successful_trips = 1;
  repeated TripError failed_trips = 2;
  int32 total_processed = 3;
  int32 success_count = 4;
  int32 error_count = 5;
}

message TripError {
  string external_trip_id = 1;
  string error_code = 2;
  string error_message = 3;
}

message TripResponse {
  string trip_id = 1;
  string external_trip_id = 2;
  string status = 3; // CREATED, ASSIGNED, STARTED, IN_PROGRESS, COMPLETED, CANCELLED
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp estimated_completion = 5;
}

// Real-time Streaming Messages
message LocationStreamRequest {
  string partner_id = 1;
  repeated string vehicle_ids = 2; // Empty = all vehicles
  int32 update_interval_seconds = 3; // Minimum interval between updates
}

message VehicleLocationUpdate {
  string vehicle_id = 1;
  string driver_id = 2;
  Location location = 3;
  google.protobuf.Timestamp timestamp = 4;
  double speed = 5; // km/h
  double heading = 6; // degrees
  string status = 7; // MOVING, IDLE, STOPPED
  int32 battery_level = 8; // Device battery %
}

message TripStreamRequest {
  string partner_id = 1;
  repeated string trip_ids = 2; // Empty = all active trips
}

message TripStatusUpdate {
  string trip_id = 1;
  string external_trip_id = 2;
  string status = 3;
  Location current_location = 4;
  google.protobuf.Timestamp timestamp = 5;
  double progress_percentage = 6;
  google.protobuf.Timestamp estimated_completion = 7;
  string notes = 8;
}

message AlertStreamRequest {
  string partner_id = 1;
  repeated string alert_types = 2; // FUEL_THEFT, BREAKDOWN, EMERGENCY, etc.
  string severity = 3; // LOW, MEDIUM, HIGH, CRITICAL
}

message FleetAlert {
  string alert_id = 1;
  string type = 2;
  string severity = 3;
  string vehicle_id = 4;
  string driver_id = 5;
  string trip_id = 6;
  string message = 7;
  Location location = 8;
  google.protobuf.Timestamp timestamp = 9;
  bool requires_action = 10;
  map<string, string> metadata = 11;
}

// Historical Data Messages
message LocationHistoryRequest {
  string partner_id = 1;
  string vehicle_id = 2;
  google.protobuf.Timestamp start_time = 3;
  google.protobuf.Timestamp end_time = 4;
  int32 max_points = 5; // Limit response size
}

message LocationHistoryResponse {
  repeated LocationPoint points = 1;
  int32 total_points = 2;
  double total_distance = 3; // km
}

message LocationPoint {
  Location location = 1;
  google.protobuf.Timestamp timestamp = 2;
  double speed = 3;
  double heading = 4;
}

// Analytics Messages
message UtilizationRequest {
  string partner_id = 1;
  google.protobuf.Timestamp start_date = 2;
  google.protobuf.Timestamp end_date = 3;
  repeated string vehicle_ids = 4; // Optional filter
}

message UtilizationReport {
  double fleet_utilization_percentage = 1;
  repeated VehicleUtilization vehicle_utilization = 2;
  google.protobuf.Duration total_active_time = 3;
  google.protobuf.Duration total_idle_time = 4;
  double total_distance_covered = 5; // km
}

message VehicleUtilization {
  string vehicle_id = 1;
  string registration_number = 2;
  double utilization_percentage = 3;
  google.protobuf.Duration active_time = 4;
  google.protobuf.Duration idle_time = 5;
  double distance_covered = 6; // km
  int32 trips_completed = 7;
}

// Event Subscription Messages
message EventSubscriptionRequest {
  string partner_id = 1;
  repeated string event_types = 2; // trip_created, vehicle_location, fuel_alert, etc.
  string webhook_url = 3;
  string delivery_method = 4; // WEBHOOK, GRPC_STREAM
  map<string, string> filters = 5; // fleet_id, vehicle_type, region, etc.
}

message SubscriptionResponse {
  string subscription_id = 1;
  string status = 2; // ACTIVE, PENDING, FAILED
  google.protobuf.Timestamp created_at = 3;
  repeated string subscribed_events = 4;
}

// Common Messages
message Location {
  double latitude = 1;
  double longitude = 2;
  string address = 3; // Optional human-readable address
  string city = 4;
  string region = 5;
  string country = 6;
}

message VehicleSpecifications {
  string engine_type = 1; // PETROL, DIESEL, ELECTRIC, HYBRID
  double fuel_capacity = 2; // liters
  double max_payload = 3; // kg
  int32 seating_capacity = 4;
  string transmission = 5; // MANUAL, AUTOMATIC
}

message VehicleLocation {
  Location location = 1;
  google.protobuf.Timestamp timestamp = 2;
  double fuel_level = 3; // percentage
  double odometer = 4; // km
  string engine_status = 5; // ON, OFF, IDLE
}

message Trip {
  string trip_id = 1;
  string external_trip_id = 2;
  string status = 3;
  Location pickup_location = 4;
  Location dropoff_location = 5;
  google.protobuf.Timestamp start_time = 6;
  google.protobuf.Timestamp end_time = 7;
  double distance_covered = 8; // km
  google.protobuf.Duration duration = 9;
}

message MaintenanceRecord {
  string maintenance_id = 1;
  string type = 2; // SCHEDULED, REPAIR, INSPECTION
  google.protobuf.Timestamp date = 3;
  double odometer_reading = 4; // km
  string description = 5;
  double cost = 6;
  string status = 7; // COMPLETED, PENDING, OVERDUE
}

message VehicleMetrics {
  double average_fuel_efficiency = 1; // km/liter
  double total_distance = 2; // km
  int32 total_trips = 3;
  google.protobuf.Duration total_driving_time = 4;
  double average_speed = 5; // km/h
  int32 harsh_braking_events = 6;
  int32 rapid_acceleration_events = 7;
  double safety_score = 8; // 0-100
}

message FuelStreamRequest {
  string partner_id = 1;
  repeated string vehicle_ids = 2;
}

message FuelEvent {
  string event_id = 1;
  string vehicle_id = 2;
  string event_type = 3; // REFUEL, THEFT_DETECTED, LOW_FUEL
  double fuel_amount = 4; // liters
  double fuel_level_before = 5; // percentage
  double fuel_level_after = 6; // percentage
  Location location = 7;
  google.protobuf.Timestamp timestamp = 8;
  double cost = 9; // Optional
  string station_name = 10; // Optional
}

// Request/Response for other endpoints
message TripDetailsRequest {
  string trip_id = 1;
  bool include_route = 2;
  bool include_driver_performance = 3;
}

message TripDetails {
  Trip trip = 1;
  repeated LocationPoint route = 2;
  DriverPerformanceMetrics driver_performance = 3;
  repeated string alerts = 4;
}

message DriverPerformanceMetrics {
  double average_speed = 1; // km/h
  int32 harsh_braking_count = 2;
  int32 rapid_acceleration_count = 3;
  int32 over_speed_violations = 4;
  double safety_score = 5; // 0-100
  google.protobuf.Duration break_time = 6;
}

message UpdateTripStatusRequest {
  string trip_id = 1;
  string status = 2;
  string notes = 3;
  Location current_location = 4;
}

message CancelTripRequest {
  string trip_id = 1;
  string reason = 2;
}

// Additional request/response messages as needed...
message TripHistoryRequest {
  string partner_id = 1;
  google.protobuf.Timestamp start_date = 2;
  google.protobuf.Timestamp end_date = 3;
  repeated string vehicle_ids = 4;
  string status = 5; // Optional filter
  int32 page = 6;
  int32 limit = 7;
}

message TripHistoryResponse {
  repeated Trip trips = 1;
  int32 total_count = 2;
  int32 page = 3;
  bool has_more = 4;
}

message FuelHistoryRequest {
  string partner_id = 1;
  string vehicle_id = 2;
  google.protobuf.Timestamp start_date = 3;
  google.protobuf.Timestamp end_date = 4;
}

message FuelHistoryResponse {
  repeated FuelEvent fuel_events = 1;
  double total_fuel_consumed = 2; // liters
  double total_cost = 3;
  double average_efficiency = 4; // km/liter
}

message DriverPerformanceRequest {
  string partner_id = 1;
  string driver_id = 2;
  google.protobuf.Timestamp start_date = 3;
  google.protobuf.Timestamp end_date = 4;
}

message DriverPerformanceResponse {
  string driver_id = 1;
  DriverPerformanceMetrics overall_metrics = 2;
  repeated DailyPerformance daily_performance = 3;
}

message DailyPerformance {
  google.protobuf.Timestamp date = 1;
  int32 trips_completed = 2;
  double distance_covered = 3; // km
  google.protobuf.Duration driving_time = 4;
  double safety_score = 5;
}

message FuelEfficiencyRequest {
  string partner_id = 1;
  google.protobuf.Timestamp start_date = 2;
  google.protobuf.Timestamp end_date = 3;
  repeated string vehicle_ids = 4;
}

message FuelEfficiencyReport {
  double fleet_average_efficiency = 1; // km/liter
  repeated VehicleFuelEfficiency vehicle_efficiency = 2;
  double total_fuel_consumed = 3; // liters
  double total_distance = 4; // km
}

message VehicleFuelEfficiency {
  string vehicle_id = 1;
  double efficiency = 2; // km/liter
  double fuel_consumed = 3; // liters
  double distance_covered = 4; // km
}

message MaintenanceRequest {
  string partner_id = 1;
  repeated string vehicle_ids = 2;
  bool include_overdue = 3;
}

message MaintenanceSchedule {
  repeated VehicleMaintenanceStatus vehicles = 1;
  int32 overdue_count = 2;
  int32 due_soon_count = 3; // Due within 7 days
}

message VehicleMaintenanceStatus {
  string vehicle_id = 1;
  string registration_number = 2;
  repeated ScheduledMaintenance scheduled_maintenance = 3;
  repeated ScheduledMaintenance overdue_maintenance = 4;
}

message ScheduledMaintenance {
  string maintenance_type = 1;
  google.protobuf.Timestamp due_date = 2;
  double due_odometer = 3; // km
  double current_odometer = 4; // km
  string priority = 5; // LOW, MEDIUM, HIGH, CRITICAL
}

message ComplianceRequest {
  string partner_id = 1;
  repeated string vehicle_ids = 2;
  repeated string compliance_types = 3; // INSURANCE, REGISTRATION, PERMIT, etc.
}

message ComplianceReport {
  repeated VehicleCompliance vehicles = 1;
  int32 compliant_count = 2;
  int32 non_compliant_count = 3;
  int32 expiring_soon_count = 4; // Expiring within 30 days
}

message VehicleCompliance {
  string vehicle_id = 1;
  string registration_number = 2;
  repeated ComplianceStatus compliance_status = 3;
}

message ComplianceStatus {
  string compliance_type = 1;
  string status = 2; // COMPLIANT, NON_COMPLIANT, EXPIRING_SOON
  google.protobuf.Timestamp expiry_date = 3;
  string document_id = 4;
}

message ListSubscriptionsRequest {
  string partner_id = 1;
}

message SubscriptionListResponse {
  repeated EventSubscription subscriptions = 1;
}

message EventSubscription {
  string subscription_id = 1;
  repeated string event_types = 2;
  string webhook_url = 3;
  string status = 4;
  google.protobuf.Timestamp created_at = 5;
  map<string, string> filters = 6;
}

message EventUnsubscriptionRequest {
  string subscription_id = 1;
}



